--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <html>
+
 <head>
+<span>
   <h1>July 420</h1>
+  <h1> <a href="{{ url_for('plot') }}">Plot</a></h1>
+</span>
 </head>
 <span>
 <form method="POST">
