--- a/templates/plot.html
+++ b/templates/plot.html
@@ -1,16 +1,28 @@
-!DOCTYPE html>
-<html lang="en">
-<head>
-  {{ resources }}
-</head>
-
-<body>
-
-  <div id="myplot"></div>
-
-  <script>
-  fetch('/myplot')
-    .then(function(response) { return response.json(); })
-    .then(function(item) { return Bokeh.embed.embed_item(item); })
+<!DOCTYPE html>
+  <html lang="en">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.2.min.js" integrity="sha384-XypntL49z55iwGVUW4qsEu83zKL3XEcz0MjuGOQ9SlaaQ68X/g+k1FcioZi7oQAc" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-2.3.2.min.js" integrity="sha384-TX0gSQTdXTTeScqxj6PVQxTiRW8DOoGVwinyi1D3kxv7wuxQ02XkOxv0xwiypcAH" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-2.3.2.min.js" integrity="sha384-bEsM86IHGDTLCS0Zod8a8WM6Y4+lafAL/eSiyQcuPzinmWNgNO2/olUF0Z2Dkn5i" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+      Bokeh.set_log_level("info");
   </script>
-</body>
+  </head>
+
+  <body>
+
+  <div class ="row">
+    <div class="column" id="myplot"></div>
+    <div class="column" id="myplot2"></div>
+  </div>
+    <script>
+    fetch('/myplot')
+      .then(function(response) { return response.json(); })
+      .then(function(item) { return Bokeh.embed.embed_item(item); })
+    </script>
+    <script>
+    fetch('/myplot2')
+      .then(function(response) { return response.json(); })
+      .then(function(item) { return Bokeh.embed.embed_item(item, "myplot2"); })
+    </script>
+  </body>
