--- a/templates/plot.html
+++ b/templates/plot.html
@@ -8,7 +8,7 @@
       Bokeh.set_log_level("info");
   </script>
   </head>
-
+<a href="{{url_for('index')}}">Back</a>
   <body>
 
   <div class ="row">
