--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,13 @@
 <html>
 
 <head>
-<span>
-  <h1>July 420</h1>
-  <h1> <a href="{{ url_for('twentytwentytwo') }}">2022</a></h1>
-  <h1> <a href="{{ url_for('plot') }}">Plot</a></h1>
-</span>
+<h1>July 420</h1>
+<nav>
+  <ul>
+    <li> <a href="{{ url_for('twentytwentytwo') }}">2022</a></li>
+    <!--<li> <a href="{{ url_for('plot') }}">Plot</a></li>-->
+  </ul>
+</nav>
 </head>
 <div class="form">
 <span>
