--- a/templates/plot.html
+++ b/templates/plot.html
@@ -11,10 +11,12 @@
 <a href="{{url_for('index')}}">Back</a>
   <body>
 
-  <div class ="row">
-    <div class="column" id="myplot"></div>
-    <div class="column" id="myplot2"></div>
-  </div>
+
+    <div id="myplot"></div>
+    <div id="myplot3"></div>
+    <div id="myplot2"></div>
+
+
     <script>
     fetch('/myplot')
       .then(function(response) { return response.json(); })
@@ -22,6 +24,11 @@
     </script>
     <script>
     fetch('/myplot2')
+      .then(function(response) { return response.json(); })
+      .then(function(item) { return Bokeh.embed.embed_item(item, "myplot2"); })
+    </script>
+    <script>
+    fetch('/myplot3')
       .then(function(response) { return response.json(); })
       .then(function(item) { return Bokeh.embed.embed_item(item, "myplot2"); })
     </script>
