--- a/static/style.css
+++ b/static/style.css
@@ -128,3 +128,5 @@ tr:nth-child(even) {
   border: none;
   background: #f1f1f1;
 }
+nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
+nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
