--- a/templates/2022.html
+++ b/templates/2022.html
@@ -6,7 +6,7 @@
 <h1>July 420 2022</h1>
 <a href="{{url_for('index')}}">Back</a>
 </head>
-<button class="open-button" onclick="openForm()">Add Song</button>
+<!--<button class="open-button" onclick="openForm()">Add Song</button>-->
 <div class="form">
 <span>
 <form method="POST">
@@ -38,9 +38,9 @@
 {% for song in data_2022 %}
   <tr>
     <td> {{ song['Rank'] }} </td>
-    <td> {{ song['song'] }} </td>
-    <td> {{ song['band'] }} </td>
-    <td><a class='action' href="{{ url_for('delete',Rank=song['Rank'])}}">Delete</a>
+    <td> {{ song['Song'] }} </td>
+    <td> {{ song['Band'] }} </td>
+    <td> {{ song['DateTime'] }} </td>
   </tr>
 {% endfor %}
 </table>
