--- a/templates/2022.html
+++ b/templates/2022.html
@@ -58,6 +58,17 @@
 
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
+
 }
+
+document.addEventListener("DOMContentLoaded", function(event) {
+     var scrollpos = localStorage.getItem('scrollpos');
+     if (scrollpos) window.scrollTo(0, scrollpos);
+ });
+
+ window.onbeforeunload = function(e) {
+     localStorage.setItem('scrollpos', window.scrollY);
+ };
+
 </script>
 </html>
