--- a/templates/2022.html
+++ b/templates/2022.html
@@ -4,7 +4,7 @@
 <head>
 <span>
 {% for max_date in max_date %}
-<h1>July 420 2022 as of {{max_date['max_date']}}</h1>
+<h1>Songs Played as of {{max_date['max_date']}}</h1>
 {% endfor %}
 <a href="{{url_for('index')}}">Back</a>
 </head>
