--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <h1>July 420</h1>
 <nav>
   <ul>
-    <li> <a href="{{ url_for('twentytwentytwo') }}">2022</a></li>
+    <li> <a href="{{ url_for('twentytwentytwo') }}">Recently Played</a></li>
     <!--<li> <a href="{{ url_for('plot') }}">Plot</a></li>-->
   </ul>
 </nav>
