fixed plots for 2022 recently played and adjusted table to have consistent width.

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -12,15 +12,15 @@
   <body>
 
 
-    <div id="myplot"></div>
     <div id="myplot3"></div>
     <div id="myplot2"></div>
+    <div id="myplot"></div>
 
 
     <script>
     fetch('/myplot')
       .then(function(response) { return response.json(); })
-      .then(function(item) { return Bokeh.embed.embed_item(item); })
+      .then(function(item) { return Bokeh.embed.embed_item(item, "myplot"); })
     </script>
     <script>
     fetch('/myplot2')
@@ -30,6 +30,6 @@
     <script>
     fetch('/myplot3')
       .then(function(response) { return response.json(); })
-      .then(function(item) { return Bokeh.embed.embed_item(item, "myplot2"); })
+      .then(function(item) { return Bokeh.embed.embed_item(item, "myplot3"); })
     </script>
   </body>
