--- a/templates/2022.html
+++ b/templates/2022.html
@@ -42,13 +42,12 @@
 {% for song in data_2022 %}
 {% if song['DatePart'] == distinct_date['distinct_date'] %}
   <tr>
-    <td> {{ song['Song'] }} </td>
-    <td> {{ song['song_time'] }} </td>
-    <td> {{ song['Band'] }} </td>
-    <td><a href="{{url_for('like',DateTime=song['DateTime'])}}">	&#128077; </a></td>
-    <td> {{ song['LIKE'] }}</td>
-    <td><a href="{{url_for('dislike',DateTime=song['DateTime'])}}"> 	&#128078; </td>
-
+    <td width="30%"> {{ song['Song'] }} </td>
+    <td width="30%"> {{ song['Band'] }} </td>
+    <td width="10%"><a href="{{url_for('like',DateTime=song['DateTime'])}}">	&#128077; </a></td>
+    <td width="10%"> {{ song['LIKE'] }}</td>
+    <td width="10%"><a href="{{url_for('dislike',DateTime=song['DateTime'])}}"> 	&#128078; </td>
+    <td width="10%"> {{ song['song_time'] }} </td>
   </tr>
 {% endif %}
 {% endfor %}
