--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <nav>
   <ul>
     <li> <a href="{{ url_for('twentytwentytwo') }}">Recently Played</a></li>
-    <!--<li> <a href="{{ url_for('plot') }}">Plot</a></li>-->
+    <li> <a href="{{ url_for('plot') }}">Plot</a></li>
   </ul>
 </nav>
 </head>
