--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
 <html>
 
 <head>
-<h1>July 420</h1>
+<h1>July420 Comparison</h1>
 <nav>
   <ul>
     <li> <a href="{{ url_for('twentytwentytwo') }}">Recently Played</a></li>
-    <li> <a href="{{ url_for('plot') }}">Plot</a></li>
+    <li> <a href="{{ url_for('index') }}">July420 Comparison</a></li>
+    <li> <a href="{{ url_for('plot') }}">Plots</a></li>
   </ul>
 </nav>
 </head>
