--- a/templates/plot.html
+++ b/templates/plot.html
@@ -7,8 +7,16 @@
   <script type="text/javascript">
       Bokeh.set_log_level("info");
   </script>
+  <h1>Plots</h1>
+  <nav>
+    <ul>
+      <li> <a href="{{ url_for('twentytwentytwo') }}">Recently Played</a></li>
+      <li> <a href="{{ url_for('index') }}">July420 Comparison</a></li>
+      <li> <a href="{{ url_for('plot') }}">Plots</a></li>
+    </ul>
+  </nav>
   </head>
-<a href="{{url_for('index')}}">Back</a>
+
   <body>
 
 
