--- a/templates/2022.html
+++ b/templates/2022.html
@@ -39,9 +39,10 @@
 
 </div>
 
-
+{% if distinct_dates %}
 <div class="row">
 <div class="column">
+
 {% for distinct_date in distinct_dates %}
 <h1>{{ distinct_date['distinct_date'] }} </h1>
 <table>
@@ -49,10 +50,10 @@
 {% if song['DatePart'] == distinct_date['distinct_date'] %}
   <tr>
     {% if song['Rank'] %}
-    <td width="30%">{{ song['Rank'] }} - {{ song['Song'] }} </td>
+        <td width="30%">{{ song['Rank'] }} - {{ song['Song'] }} </td>
     {% else %}
-    <td width="30%">{{ song['Song'] }} </td>
-{% endif %}
+        <td width="30%">{{ song['Song'] }} </td>
+    {% endif %}
     <td width="30%"> {{ song['Band'] }} </td>
     <td width="10%"><a href="{{url_for('like',DateTime=song['DateTime'])}}">	&#128077; </a></td>
     <td width="10%"> {{ song['LIKE'] }}</td>
@@ -65,6 +66,9 @@
 {% endfor %}
 </div>
 </div>
+{% else %}
+<h1>No Data</h1>
+{% endif %}
 <script>
   function openForm() {
   document.getElementById("myForm").style.display = "block";
