--- a/templates/song.html
+++ b/templates/song.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-<h1>Song Page</h1>
+<h1>Song Discussion</h1>
 
 <nav>
   <ul>
@@ -18,8 +18,9 @@
 <div class="form">
 <span>
 <form method="POST">
+<input type="text" name="comment" id="comment" size="50" placeholder="Comment on the song...">
 <input type="text" name="author" id="author" placeholder="Who are you?...">
-<input type="text" name="comment" id="comment" placeholder="Comment on the song...">
+
 <input class="btn" type="submit" name="submit_button" value="Add Comment">
 <input type="hidden" id="trackid" name="trackid" value="{{ song['trackid'] }}"]>
 <input type="hidden" id="song" name="song" value="{{ song['Song'] }}">
